--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -7,7 +7,7 @@
     <title>S-Brand</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-mainBg"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
